cabal-version:       2.4

name:                learn-haskell-with-aoj
version:             0.1.0.0
synopsis:            AOJ Practice with Haskell
description:         Haskell solutions for AOJ (Aizu Online Judge)
license:             BSD-3-Clause
license-file:        LICENSE
author:              disk.inoue
maintainer:          disk.inoue@example.com
copyright:           2025 disk.inoue
category:            Practice
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

common warnings
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable aoj
  import:              warnings
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite aoj-test
  import:              warnings
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , hspec >= 2.0
                     , QuickCheck
  hs-source-dirs:      test
  default-language:    Haskell2010
